@@ -1,7 +1,7 @@
 <?php
 /**
  * PHP LDAP CLASS FOR MANIPULATING ACTIVE DIRECTORY 
- * Version 4.0.2
+ * Version 4.0.3
  * 
  * PHP Version 5 with SSL and LDAP support
  * 
@@ -31,7 +31,7 @@
  * @copyright (c) 2006-2011 Scott Barnett, Richard Hyland
  * @license http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html LGPLv2.1
  * @revision $Revision: 97 $
- * @version 4.0.2
+ * @version 4.0.3
  * @link http://adldap.sourceforge.net/
  */
 require_once(dirname(__FILE__) . '/../adLDAP.php');
@@ -118,7 +118,7 @@ class adLDAPFolders {
         if (is_array($folderName)) {
             $ou = $dnType . "=" . implode("," . $dnType . "=", $folderName);
             $filter .= '(!(distinguishedname=' . $ou . ',' . $this->adldap->getBaseDn() . ')))';
-            $searchou = $ou . ',' . $this->adldap->getBaseDn();
+            $searchOu = $ou . ',' . $this->adldap->getBaseDn();
         }
         else {
             $filter .= '(!(distinguishedname=' . $this->adldap->getBaseDn() . ')))';
